--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -109,9 +109,12 @@ jobs:
         run: make docs
 
   deploy-image:
-    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: test
+    if: github.event_name == 'push'
+    env:
+      DOCKER_REGISTRY: ghcr.io
+      DOCKER_IMAGE_NAME: ${{ github.repository }}
     permissions:
       contents: read
       packages: write
